Add names endpoint to ProjectsController and implement caching for package/project names
